Contract Configurator 1.30.5
- Fixed SI units not appearing on HasAntenna parameter (thanks Nobody6).

Contract Configurator 1.30.4
- Fixed major issue when Breaking Ground wasn't installed (thanks boribori).

Contract Configurator 1.30.3
- Deployed Science from Breaking Ground no longer generates tons of message spam.  Instead, the messages (including screen messages) are intercepted and combined into a single more useful message.
- Re-enable the reload contracts button (may or may not work).
- Fixed issue where invertRequirement was no longer allowed for Any (and All) REQUIREMENT nodes (thanks Morphisor).
- Made Asteroid and Comet science into Sun-only science to prevent them from showing up in weird (but valid according to the game) scenarios.  Prevents contracts for things like "comet sample while landed on Kerbin" (thanks Lathari).
- Cleaned up some duplicated name in the contract type selection settings window (thanks gamerscircle).
- Added Experiment.ID().
- Removed a workaround for a stock bug fixed in 1.4.3 (#18267).

Contract Configurator 1.30.2
- Backport localization tags missing from KSP 1.8 into Contract Configurator (thanks MatjaBrown, TomTheHand, IonTracks & Lignite).

Contract Configurator 1.30.1
- Translation for Chinese Simplified (thanks tinygrox).
- Restore compatibility back to KSP 1.8.1.
- General improvements to error handling.
- Fixed exception in CollectionScience title when there is no targetBody (thanks Morphisor).

Contract Configurator 1.30.0
- Recompile against KSP 1.10.1.
- Localization support.
- Added Format() function to expressions to support better contract pack localization.
- Partial translation for Chinese Simplified (thanks tinygrox).
- Support for Breaking Ground science.
- Support for comet science.
- Added Mission Control icons for Sentinel (KSP 1.3) and Robotics (Breaking Ground) stock contracts.
- Significant cleanup of string addition to reduce garbage generation.